--- a/Experiments_simple_sizes B.Rmd
+++ b/Experiments_simple_sizes B.Rmd
@@ -11,15 +11,16 @@ lot: yes    ## list of tables
 lof: yes    ## list of figures
 documentclass: article
 classoption: a4paper
+# lang: frenchb   # Language ?
 geometry: "left=1.5cm,right=1.5cm,top=1.5cm,bottom=2cm,footskip=1cm" # try effect
 footer: \thetitle \ \textemdash \ \thepage 
 output: 
-  # pdf_document:
-  #   # keep_tex: true
-  #   number_sections: yes
-  #   toc: yes
-  #   template: latex_temp2.latex
-  #   fig_caption: yes
+  pdf_document:
+    # keep_tex: true
+    number_sections: yes
+    toc: yes
+    template: latex_temp2.latex
+    fig_caption: yes
 
   html_document:
     number_sections: yes
@@ -41,7 +42,7 @@ library(knitr)
 
 # ** Some code *******
 
-## Identify output type **********
+## Identify context: output type **********
 # From Hadley's ggplot2 book:  Knowing conversion target 
 is_latex <- function() {
         identical(knitr::opts_knit$get("rmarkdown.pandoc.to"), "latex")
@@ -51,9 +52,6 @@ is_latex <- function() {
 is_html <- function() {
         identical(knitr::opts_knit$get("rmarkdown.pandoc.to"), "html")
 }
-
-
-
 
 
 pdfoutput <- is_latex() # tells if we are converting through latex, ie to pdf
@@ -71,18 +69,40 @@ getcontext <- function(){
 
 chunkname <- function() {knitr::opts_current$get("label")}
 
+
+
+
 # Table captions
-tabcap <- function(caption, chunklabel=knitr::opts_current$get("label"),
-                   context=if (is_latex()) {"latex" 
-                   } else if (is_html()) {
-                           "html"
-                   } else {"other"} ) {
+# tabcap <- function(caption,
+#                    chunklabel=knitr::opts_current$get("label"),
+#                    context=getcontext()) {
+#         
+#         switch(context,
+#                latex = paste0("\\label{tab:", chunklabel, "}",
+#                               caption),
+#                html = paste0("<div id=tab:", chunklabel, ">",
+#                              caption, "</div>"),
+#                other = caption ) 
+# }
+
+
+tabcap <- function(caption,
+                   chunklabel=knitr::opts_current$get("label"),
+                   context=getcontext()) {
         
         switch(context,
-               latex = paste0("\\label{tab:", chunklabel, "}", caption),
-               html = paste0("<div id=tab:", chunklabel, ", ", caption, "</div>"),
+               latex = paste0("\\label{tab:", chunklabel, "}",
+                              caption),
+               html = paste0("<a name=tab:", chunklabel, ">",
+                             caption, "</a>"),
                other = caption ) 
 }
+
+
+
+
+
+
 
 # figure captions ?? ==> No, not needed with pdf_output
 figcap <- function(caption, chunklabel=knitr::opts_current$get("label")) {
@@ -91,7 +111,7 @@ figcap <- function(caption, chunklabel=knitr::opts_current$get("label")) {
         paste0("\\label{fig:", chunklabel, "}", caption)
 }
 
-# test
+# tests
 
 tabcap("one", "thzchunk", context = "latex")
 tabcap("one", "thzchunk", context = "html")
@@ -99,21 +119,34 @@ tabcap("one", "thzchunk", context = "html")
 
 # inserting a reference to a label, using the context
 
+# .ref <- function(prefix = NULL, 
+#                  reflabel = "", 
+#                  context = getcontext()) {
+#         switch(EXPR = context,
+#                latex = paste0("\\ref{",prefix, reflabel,"}"),
+#                html = paste0("<A HREF=\"#", 
+#                               prefix, reflabel,
+#                               "\">", reflabel , "</A>"), # reflabel here ?
+#                other = paste0("(#",prefix, reflabel ,")")
+#         )        
+# }
+
 .ref <- function(prefix = NULL, 
                  reflabel = "", 
-                 context = if (is_latex()) {
-                         "latex"
-                 } else if (is_html()) {
-                         "html"
-                 } else {"other"}) {
+                 context = getcontext()) {
         switch(EXPR = context,
                latex = paste0("\\ref{",prefix, reflabel,"}"),
-               html = paste0("<A HREF=\"#", 
+               html = paste0("<a href= #", 
                               prefix, reflabel,
-                              "\">", reflabel , "</A>"), # reflabel here ?
+                              ">", reflabel , "</a>"), # reflabel here ?
                other = paste0("(#",prefix, reflabel ,")")
         )        
 }
+
+
+
+
+
 
 # testit
 
@@ -233,7 +266,7 @@ c(ctxt=getcontext(), Latex = is_latex(), HTML = is_html())
 
 
 
-# R Markdown {#rmd}
+# R Markdown {#Rmd}
 
 This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
@@ -247,15 +280,15 @@ library(pander)
 ```
 
 
-* Let us print summary of "Cars", with a kable table
+* Let us print summary of "Cars", with a kable table: see figure `r .ref("tab:cars")`
 
 ```{r cars}
 
 knitr::kable(summary(cars), 
-             caption = tabcap("This is the 'cars' Kable Table")) # changed
+             caption = tabcap("Summary Table (Kable)")) # changed
 ```
 
-* and a table for the mean. standard deviation of each col
+* and a table for the mean. standard deviation of each col. see Table `r .ref("tab:meansd")`
 
 ```{r meansd}
 tab <- sapply(X = cars, FUN = function(col) {
@@ -266,16 +299,16 @@ tab <- sapply(X = cars, FUN = function(col) {
 row.names(tab) <- c("Mean", "Standard deviation")
 
 kable(tab, 
-      caption = tabcap("This is the 'meansd' kable table (mean+sd)"))
+      caption = tabcap("Mean - Standard deviation kable table"))
 ```
 
 
 
 
-* Now we should show head(cars) with a pander table
+* Now we should show head(cars) with a pander table: Table `r .ref("tab:thisispander")`
 
-```{r thisispander, cache=TRUE}
-pander(head(cars), caption = tabcap("Pandertable one"))
+```{r thisispander, cache=FALSE}
+pander(head(cars), caption = tabcap("Head of `cars` (Pander)"))
 ```
 
 
@@ -285,7 +318,7 @@ This is the beginning of a wonderful friendship! {#friendship}
 
 You can also embed plots, for example:
 
-Sur 2 colonnes:(4 plots)
+Sur 2 colonnes:(4 plots) in figure `r .ref("fig:basic")`
 
 
 ```{r basic, cache = TRUE, fig.width=w.12, fig.asp=a.34, fig.cap = "2 cols 4 plots(chunk = 'basic')" } 
@@ -303,7 +336,7 @@ p + geom_bar(stat = "identity") + ggtitle("bar")
 p + geom_tile() + ggtitle("raster")
 ```
 
-* Idem 3 colonnes, avec modèle prédéfini
+* Idem 3 colonnes, avec modèle prédéfini: figure `r .ref("fig:basic2")`
 
 ```{r basic2, cache = TRUE, opts.label = ".f13", fig.cap = "4 cols 4 plots(chunk = 'basic2')"}
 p <- ggplot(df, aes(x, y, label = label)) + 
@@ -316,7 +349,7 @@ p + geom_tile() + ggtitle("raster")
 ```
 
 
-4 colonnes
+4 colonnes dans la  figure `r .ref("fig:basicx2")`
 
 ```{r basicx2, cache = TRUE, w=w.14, fig.asp=a.13, fig.cap = "4 cols 4 plots(chunk = 'basicx2')"}
 p + geom_line() + ggtitle("line")
@@ -328,7 +361,7 @@ p + geom_polygon() + ggtitle("polygon")
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
 
-Again: 
+Again: figure `r .ref("fig:pressure")`
 
 ```{r pressure, echo=TRUE, w=w.13, a=a.12, fig.cap = "3 cols 3 base plots(chunk = 'pressure'). Not so good."}
 x1 = 1:6
@@ -369,27 +402,44 @@ knitr::opts_knit$get("rmarkdown.pandoc.to")
 And now two internal references:
 
 * header references
-    * See the [R Markdown section](#Rmd)
-    * See the [Plots section](#plots)
-* Table references a la test reference; does **not** work : link points to beginning
-    * refer to table [The "Summary table"](#tab:cars)
-    * refer to [the means/SD table](#tab:meansd)
-    * refer to [Pander table](#tab:thisispander) 
+    * PDF: link Ok, no numbering
+    * HTML: link Ok, no numbering
+        * See the section [Introduction](#intro)
+        * See the [R Markdown section](#Rmd)
+        * See the [Plots section](#plots)
+    
+* Table references a la text reference: `[text](#anchorname)` 
+    * PDF: does **not** work : link points to beginning
+    * HTML: Links are ok, but we get no numbering  
+        * refer to table [The "Summary table"](#tab:cars)
+        * refer to [the means/SD table](#tab:meansd)
+        * refer to [Pander table](#tab:thisispander) 
+
 * Table references a la Latex or html ? (création des refs avec tabcap, appel avec `\ref{...)` ou `inline: .ref("tab:cars")`
-    * refer to table [The "Summary table"], ie table `r .ref("tab:cars")`
-    * refer to [the means/SD table], ie table \ref{tab:meansd}
-    * refer to [Pander table], ie table \ref{tab:thisispander}
-* Figure references
-    * create figcap ??? no need !!!
-    * refer to figure \ref{fig:basic}
-    * refer to figure \ref{fig:basic2}
-    * refer to figure \ref{fig:basicx2}
-    * refer to figure \ref{fig:pressure}
+    * PDF: full OK
+    * HTML: Nothing
+        * refer to table [The "Summary table"], ie table `r .ref("tab:cars")`
+        * refer to [the means/SD table], ie table `\ref{tab:meansd}`, r .ref("tab:cars")`
+        * refer to [Pander table], ie table \ref{tab:thisispander}
+
+* Figure references latex-style
+    * PDF: full ok: number + link
+    * HTML: no
+        * create figcap ??? no need !!!
+        * refer to figure \ref{fig:basic}
+        * refer to figure \ref{fig:basic2}
+        * refer to figure \ref{fig:basicx2}
+        * refer to figure \ref{fig:pressure}
+
 * Code references ?
-    * bloc of code \ref{basic} : NON, ne fonctionne pas
-    * bloc of code [basic](basic) : NON, ne fonctionne pas
+    * PDF:
+    * HTML: 
+        * bloc of code \ref{basic} : NON, ne fonctionne pas
+        * bloc of code [basic](basic) : NON, ne fonctionne pas
 * text references
-    * [friendship](#friendship)  : NON, ne fonctionne pas (début)
+    * PDF:
+    * HTML: 
+        * [friendship](#friendship)  : NON, ne fonctionne pas (début)
     
     
 **That's it!**
