--- a/testcross2_latex.rmd
+++ b/testcross2_latex.rmd
@@ -1,19 +1,21 @@
 ---
 title: "Cross refs, captions + figures with Latex/Pdf documents"
+subtitles: Experiments with inline LaTex.
 author: "Bruno Fischer Colonimos"
 date: "11 juillet 2017"
 include_graphics: yes
 linkcolor: red
 lof: yes
 lot: yes
-include-before: "\\newcommand*{\\secref}[1]{Section~\\ref{#1}}" # does not work
-header-includes: "\\usepackage{float}" #error: ! LaTeX Error: File `floats.sty' not found.
+include-before: "\\newcommand*{\\secref}[1]{Section~\\ref{#1}}" # not necessary
+header-includes: "\\usepackage{float}" 
 output: 
   pdf_document:
     fig_caption: yes
     keep_tex: yes
     number_sections: yes
     toc: yes
+    toc_depth: 3
 ---
 
 
@@ -22,6 +24,16 @@ output:
  \ 
  
 ```{r prelim, echo = FALSE}
+
+# general params
+# ============================
+
+activate_manual_pb <- TRUE
+
+
+# context-detection functions
+# ============================
+
 # getcontext returns the doc conversion context
 # From Hadley's ggplot2 book:  Knowing conversion target 
 is_latex <- function() {
@@ -40,15 +52,55 @@ getcontext <- function(){
                    } else {"other"} 
 }
 
-centertext <- function(string, bold = FALSE, context = getcontext()){
-        switch(context,
-               html = paste0("",string, ""),
-               latex = paste0("\\begin{center}", 
-                              ifelse(bold, paste0("\\textbf{", string, "}") ,
-                                     string),
-                              "\\end{center}"),
-               other = string) 
+
+# labelling and referencing functions
+# ===================================
+
+# principles: 
+# * captions: if captioning is enabled, all the plots should hava a a caption.( default text = ""). in the caption ther will be a label statement:        
+
+cap <- function(prefix, id, text = "", 
+                center=FALSE, col="black", 
+                inline=FALSE){
+        refName <- paste(prefix, id, sep = ":")
+        paste0("\\label{", refName, "}",text)
 }
+
+ref <- function(prefix, id, pagen = FALSE){
+        refName <- paste(prefix, id, sep = ":")
+        lcommand <- ifelse(pagen,"pageref","ref")
+        paste0("\\", lcommand,"{", refName, "}")
+}
+
+
+#  helper functions
+#  ================
+centertext <- function(string, decoration = c("","*", "_" ,"**", "__" ), 
+                 context = getcontext()){
+        if (decoration == "*" || decoration == "_" ) {
+                switch(context,
+                       html = {db <- "<em>" ; fin <- "</em>"},
+                       latex = {db <- "\\textit{" ; fin <- "}"},
+                       other = {db <- "" ; fin <- ""} )
+                
+        } else if (decoration == "**" || decoration == "__"){
+                switch(context,
+                       html = {db <- "<strong>" ; fin <- "</strong>"},
+                       latex = {db <- "\\textbf{" ; fin <- "}"},
+                       other = {db <- "" ; fin <- ""} )
+        } else {db <- "" ; fin <- "" }
+
+string  <- paste0(db, string, fin)
+         
+string  <-  switch(context,
+               html = paste0("<center>",string, "</center>"),
+               latex = paste0("\\begin{center}", string,"\\end{center}"),
+               other = string) 
+string
+}
+
+
+
 
 pagebreak <- function(string = "", active = FALSE, context = getcontext()){
         if (active) {
@@ -64,7 +116,7 @@ pagebreak <- function(string = "", active = FALSE, context = getcontext()){
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE, fig.width = 3, fig.height=2, fig.align = "center", fig.show = "hold", fig.pos = "H")
-# knitr::opts_knit$set(kable.force.latex = TRUE) # try correcting page placement of tables
+# knitr::opts_knit$set(kable.force.latex = TRUE) # try correcting overfloating tables
 ```
 
 
@@ -84,28 +136,45 @@ Here all is in Latex
 
 # Conclusions {#conclusions}
 
-* figures
-    * do not need a "Label" in their captions, 
-    * are crossreferencable, as soon as they have a caption option in the chunk.
+* We must use captions. BUT, whenever we have captions, figures and tables will "float" on the pages, and it may be difficult to understand where.
+    * for figures, 
+        * use the Yaml header: `header-includes: "\\usepackage{float}" `
+        * specify **in the default chunk options of knitr**: fig.pos = H , like that:
+            * knitr::opts_chunk$set(echo = TRUE, fig.show = "hold", fig.pos = "H")
+    * For tables : ?? we should replace `\begin{table}` with `\begin{table}[H]`. working on it ... But with figures fixed, tables seem more or less manageable. 
+
+* Figures come in 2 flavours
+    * plots, created by a code chunk in the text
+        * do not need a "Label" in their captions, 
+        * are crossreferencable, as soon as they have a caption option in the chunk.
     (i.e. fig.cap = "some text" creates the reference. The anchor name is the chunk name)
-    * What if they are supplied a different name ??
+        * What if they are supplied a different name : the supplied label takes precedence
+        * TODO: give captions to all figures. 
+            + labels: We may use the automatic id = fig:chunkname, or assign a forced id with `\label` 
+            + reference: use `\ref{id}` ==> returns the figure number.
+            + page reference: use `\pagref{id}` ==> returns the figure pagenum.
+    * images, retrieved from disk by a pandoc image link. 
+        * TODO: Use: `![\label{fig:name}image text caption](image_path.jpg){width=2.5in height=2in}`
     
 * tables
     * Also work without explicit label (at least for kable and pander table): a plain text caption triggers numbering, but only the system knows their anchor, so ;
     * do need a label command in their captions
-    * If a table is created without a caption, the table index is still incremented: if captions are enabled, it is better to systematically caption all tables. However what to do with manual tables ?
+    * If a table is created without a caption, the table index is still incremented: if captions are enabled, it is better to systematically caption all tables. However what to do with manual tables? : assign manually a caption: on the line directly after the table, enter:
+        * this: `Table: Here is your caption text \label{tab:id}`
 
 
 * Arbitrary anchors in text:
-    * When in a section, a `\label(id)` will point to a section header. But no link is provided to the `\ref(id)`; unless we have `number-sections: yes` in the yaml header 
+    * We can put a `\label{id}` in a section's ordinary text.
+        + When referred to by `\ref{id}` then it will point to the _section header_. (But no link is provided to the `\ref(id)`; unless we have `number-sections: yes` in the yaml header)
+        + when referred to with `\pageref{id}`, it will return the _label's page_
 
-* Section references
-    * see section \secref{sec:mean-diff}
+* Section references: _we need **"number-sections: yes"** in the yaml header_. Yes using the header label (but for the link, use #label)
+    * example: see section "[Referencing again after the creation](#refagain)", (link not-so-neccessary here, as we get it right now, but it also work when sections are not numbered) , i.e. section \ref{refagain}, beginning page \pageref{refagain}.
 
 
-# Including / referencing  Plots and table examples {"plottables"}
+# Including / referencing  Plots and table examples {#plottables}
 
-You can embed and reference plots. 
+You can embed and reference plots, tables and sections, plus arbitrary loci in the text.
 
 
 ## Referencing elements produced later in the document {#refbefore}
@@ -134,20 +203,32 @@ Let us reference them before we create them: for example:
     * table \ref{tab:mtcars}, 
     * table \ref{tab:cars}
 
+* referencing section/subsection headers
+    * Headers have an id defined by {#id} at the end of the header
+    * header link: [more tables section](#sec:moretab) ==> links ok, using #id as a target
+    * header id works with pageref : section [more tables section](#sec:moretab) is section \ref{sec:moretab} and begins on page \pageref{sec:moretab} ==> ok, use `\ref{id}`, not `\ref{id}` 
+    * header ref with `secref` : \secref{sec:moretab},==> also works
+    * you can also put an arbitrary text reference at the beginning of te section, but it is unnecessary 
+    
 * referencing arbitrary text
-    * header link: [more tables section](#sec:moretab) \pageref{sec:moretab}
-    * header ref : \secref(sec:moretab)
     * text \ref{text:verse} link that takes the form of the section number ==> should be used to reference sections
+    * Text again with secref: \secref(text:verse)
+    * more text with a quote reference \ref{quote}, page \pageref{quote} 
     * try also the link form: [#sec:moretab](#sec:moretab), 
-    * or [#sec:moretab](#sec:moretab)
+    * or [sec:moretab](sec:moretab) 
+    * try again: with section header `create`: section \ref{create}, page \pageref{create}
 
 
 ## Creating Plots and tables {#create}
 
-\label{text:verse}
+\label{text:verse} 
+This label(`\label{text:verse}`) is in the text at the beginning of the section. It can be used in refs and points to the section. (not the verse) the reference would be section \ref{text:verse}, page \pageref{text:verse} 
+
+`r pagebreak(active = activate_manual_pb )`
 
 |       Precise and Visual 
 |       ------------------:
+|          
 |          The plot reigns supreme
 |            In the ocean of stats
 |  and brings secrets to the light
@@ -157,12 +238,20 @@ Let us reference them before we create them: for example:
 |              facts to the reader
 |    brings numbers in the picture
 |             shows proof forcibly
-|                  without a doubt
+|
+|                          without 
+|                          a doubt
+Table: A "poem" (?) as a table with a label \label{tab:poem}
 
+Remark: with every the table,  the table index is increased by 1, even without caption
+
+The above table is manually set up and had been assigned a label (tab:poem) the label can be referred to by table \ref{tab:poem}, page \pageref{tab:poem} 
+- ref is ok, but pageref is not: it just shows here the section number as well.
 
 
 ### Two tables and more plots {#twotab}
 
+With this first chunk, we produce table \ref{firsttbchunk} (firsttbchunk is the chunk name), but no luck? appending tab: \ref{tab:firsttbchunk} does'nt work and there is no label set in the tex file. How the hell does the system know this plot in the list of pictures ?
 
 
 ```{r firsttbchunk}
@@ -190,7 +279,7 @@ ggplot(ToothGrowth, aes(dose,len, color = supp))+ geom_jitter() + facet_grid(sup
 
 
 
-```{r pressure, echo=FALSE, fig.cap = "hard-coded"}
+```{r pressure, echo=FALSE, fig.cap = "hard-coded", fig.height=3}
 # removed:"\\label{fig:foo}This is caption fig 0"
 plot(pressure)
 ```
@@ -200,7 +289,7 @@ Note that the `echo = FALSE` parameter was added to the code chunk to prevent pr
 Here is a Picture (not a plot generated by the doc), labelled \ref{fig:pict}
 
 
-![\label{fig:pict}Kahnemann Indifference curves](Kahneman indiffernce.jpg)
+![\label{fig:pict}Kahnemann Indifference curves](Kahneman indiffernce.jpg){width=2.5in height=2in}
 
 
 
@@ -213,7 +302,16 @@ ggplot(mtcars, aes(wt, mpg))+ geom_point()
 ggplot(mtcars, aes(cyl, mpg))+ geom_boxplot(aes(group=cyl))
 ```
 
-Some more text to separate items the, a ast plot
+Some more text to separate the items , 
+
+This is a famous quote
+
+"Prediction is difficult, especially about the future." Yogi Berra \label{quote}
+
+What if we reference this ?
+direct ref is \ref{quote}, page \pageref{quote}
+
+Now, a last plot
 
 ```{r chunfkfaa, fig.cap = "\\label{fig:faa}This is caption fig 3"}
 ggplot(mtcars, aes(disp, mpg))+ geom_point(aes(color=factor(cyl)))
@@ -238,26 +336,26 @@ kable(summary(cars),
       caption = "\\label{tab:cars}This is the 'cars' `kable` table (ie 2)")
 ```
 
-`r pagebreak() `
 
-And another
 
-```{r xcars, results='asis'}
-kable(list(summary(cars),summary(ToothGrowth)), 
-      caption = "\\label{tab:xcars}This is the 'cars' `kable` double table (ie 3)")
+And another (double table)
+
+```{r xcars, results='asis', fig.pos="H"}
+print(kable(list(summary(cars),summary(ToothGrowth)), 
+      caption = "\\label{tab:xcars}This is the 'cars' `kable` double table (ie 3)"), 
+     table.placement="H") # don't know if this really helps
 ```
 
 
 
 ## Referencing again after the creation: {#refagain}
 
-`r pagebreak()`
 
-And you can also reference figures again:  
+* We first have 
+    * an uncaptioned kable table in chunk firsttbchunk: table \ref{tab:firsttbchunk}, or maybe \ref{tab:hehe}
+    * an uncaptioned pander table in chunk firsttb2chunk: table \ref{tab:firsttb2chunk}    
+    * an uncaptioned plot figure \ref{fig:firstchunk}, (chunk name as anchor)
 
-* we first have 
-    * an uncaptioned plot figure \ref{fig:firstchunk}, 
-    * and an uncapped table in the same  chunk: table \ref{tab:firsttbchunk}
     * a text-captioned (without label) plot figure \ref{fig:secchunk}, (chunk name as anchor), and 
     * a text-captioned plot from an unnamed chunk : \ref{fig:unnamed-chunk-1} (chunk name as anchor)
 
@@ -266,18 +364,34 @@ And you can also reference figures again:
     * Figure \ref{fig:foo} or 
     * figure \ref{fig:fee}  and at last 
     * figure \ref{fig:faa}
-
+* pictures (not generated by the document)
+    * picture \ref{fig:pict}
 
 * Referencing the tables : 
-    * Table \ref{tab:firsttbchunk}, 
+    * Table \ref{tab:firsttbchunk},
+    * Table \ref{tab:firsttb2chunk},
     * table \ref{tab:mtcars}, 
     * table \ref{tab:cars}
-    * table \ref{tab:xcars}
+
+* referencing section/subsection headers
+    * Headers have an id defined by {#id} at the end of the header
+    * header link: [more tables section](#sec:moretab) ==> links ok, using #id as a target
+    * header id works with pageref : section [more tables section](#sec:moretab) is section \ref{sec:moretab} and begins on page \pageref{sec:moretab} ==> ok, use `\ref{id}`, not `\ref{id}` 
+    * header ref with `secref` : \secref{sec:moretab},==> also works
+    * you can also put an arbitrary text reference at the beginning of te section, but it is unnecessary 
+    
+* referencing arbitrary text
+    * text \ref{text:verse} link that takes the form of the section number ==> should be used to reference sections
+    * Text again with secref: \secref(text:verse)
+    * more text with a quote reference \ref{quote}, page \pageref{quote} 
+    * try also the link form: [#sec:moretab](#sec:moretab), 
+    * or [sec:moretab](sec:moretab) 
+    * try again: with section header `create`: section \ref{create}, page \pageref{create}
 
 
 # The end {#end}
 
 And some text to finish: \
-`r centertext( "Goodbye", bold = TRUE)`
+`r centertext( "Goodbye", decoration = "*")`
 
 
