--- a/A2_testcross3_latex.Rmd
+++ b/A2_testcross3_latex.Rmd
@@ -7,12 +7,12 @@ include_graphics: yes
 linkcolor: red
 lof: yes
 lot: yes
-include-before: "\\newcommand*{\\secref}[1]{Section~\\ref{#1}}" # not necessary
+# include-before: "\\newcommand*{\\secref}[1]{Section~\\ref{#1}}" # not necessary
 header-includes: "\\usepackage{float}" 
 output: 
   pdf_document:
     fig_caption: yes
-    keep_tex: yes
+    keep_tex: no
     number_sections: yes
     toc: yes
     toc_depth: 3
@@ -182,9 +182,9 @@ You can embed and reference plots, tables and sections, plus arbitrary loci in t
 Let us reference them before we create them: for example:
 
 * We first have 
-    * an uncaptioned kable table in chunk firsttbchunk: table \ref{tab:firsttbchunk}, or maybe \ref{tab:hehe}
+    * an uncaptioned kable table in chunk firsttbchunk: table \ref{tab:firsttbchunk}, or maybe \ref{tab:hehe} No, use id = "table.2" ==> Table table \ref{"table.2"}
     * an uncaptioned pander table in chunk firsttb2chunk: table \ref{tab:firsttb2chunk}    
-    * an uncaptioned plot figure \ref{fig:firstchunk}, (chunk name as anchor)
+    * an uncaptioned plot figure \ref{fig:firstchunk}, (chunk name as anchor) ==> id = V ==> fig:\ref{"figure.1"}
 
     * a text-captioned (without label) plot figure \ref{fig:secchunk}, (chunk name as anchor), and 
     * a text-captioned plot from an unnamed chunk : \ref{fig:unnamed-chunk-1} (chunk name as anchor)
@@ -198,8 +198,8 @@ Let us reference them before we create them: for example:
     * picture \ref{fig:pict}
 
 * Referencing the tables : 
-    * Table \ref{tab:firsttbchunk},
-    * Table \ref{tab:firsttb2chunk},
+    * Table \ref{tab:firsttbchunk}, no but with the id "table.2" (this is table 2 - cf poem) table \ref{"table.2"}
+    * Table \ref{tab:firsttb2chunk}, idem "table.3" table \ref{"table.3"}
     * table \ref{tab:mtcars}, 
     * table \ref{tab:cars}
 
@@ -207,12 +207,12 @@ Let us reference them before we create them: for example:
     * Headers have an id defined by {#id} at the end of the header
     * header link: [more tables section](#sec:moretab) ==> links ok, using #id as a target
     * header id works with pageref : section [more tables section](#sec:moretab) is section \ref{sec:moretab} and begins on page \pageref{sec:moretab} ==> ok, use `\ref{id}`, not `\ref{id}` 
-    * header ref with `secref` : \secref{sec:moretab},==> also works
+    * header ref with `secref` : `\secref{sec:moretab}`,==> also works, but not interesting ?
     * you can also put an arbitrary text reference at the beginning of te section, but it is unnecessary 
     
 * referencing arbitrary text
     * text \ref{text:verse} link that takes the form of the section number ==> should be used to reference sections
-    * Text again with secref: \secref(text:verse)
+    * Text again with secref: `\secref(text:verse)`
     * more text with a quote reference \ref{quote}, page \pageref{quote} 
     * try also the link form: [#sec:moretab](#sec:moretab), 
     * or [sec:moretab](sec:moretab) 
@@ -377,12 +377,12 @@ print(kable(list(summary(cars),summary(ToothGrowth)),
     * Headers have an id defined by {#id} at the end of the header
     * header link: [more tables section](#sec:moretab) ==> links ok, using #id as a target
     * header id works with pageref : section [more tables section](#sec:moretab) is section \ref{sec:moretab} and begins on page \pageref{sec:moretab} ==> ok, use `\ref{id}`, not `\ref{id}` 
-    * header ref with `secref` : \secref{sec:moretab},==> also works
+    * header ref with `secref` : `\secref{sec:moretab}`,==> also works
     * you can also put an arbitrary text reference at the beginning of te section, but it is unnecessary 
     
 * referencing arbitrary text
     * text \ref{text:verse} link that takes the form of the section number ==> should be used to reference sections
-    * Text again with secref: \secref(text:verse)
+    * Text again with secref: `\secref(text:verse)`
     * more text with a quote reference \ref{quote}, page \pageref{quote} 
     * try also the link form: [#sec:moretab](#sec:moretab), 
     * or [sec:moretab](sec:moretab) 
